--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "axios": "^1.6.0",
         "csv-parse": "^5.5.0",
+        "pdfkit": "^0.17.2",
         "simple-statistics": "^7.8.0",
         "xlsx": "^0.18.0"
     },
